<resources>
    <string name="app_name">Chill Talks</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="username1">username</string>
    <string name="emai1l">email</string>
    <string name="password1">password</string>
    <string name="create_new_account1">create_new_account</string>
    <string name="email1">Email</string>
    <string name="sign_up">sign_up</string>
    <string name="need_an_account">need_an_account</string>
    <string name="abhinav_shiva">abhinav_shiva</string>
    <string name="abhinav_shiva1"><![CDATA[abhinav&shiva]]></string>
    <string name="from">from</string>
    <string name="login">login</string>
    <string name="signin">signIn</string>
    <string name="login1">login</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">hello</string>
    <string name="hello1">hello</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_you_password">By clicking RESET, you will receive an email to reset you password</string>
    <string name="your_email">Your Email</string>
    <string name="username2">username</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="abhinav_reddy">Abhinav Reddy</string>
</resources>